add weird thumb trick

--- a/game/index.html
+++ b/game/index.html
@@ -148,6 +148,7 @@
             },
             tech: {
                 // Format: id: { name, cost, desc, trigger: { building, count }, effect: { type: 'mult', target, value }, purchased: false }
+                ThumbTrick: { id: 'ThumbTrick', name: 'Weird Thumb Trick', cost: 25, desc: 'Cursor clicks are twice as efficient.', trigger: { building: 'cursor', count: 2 }, effect: { type: 'mult', target: 'cursor', value: 2 }, purchased: false, icon: '👆' },
                 reinforcedIndex: { id: 'reinforcedIndex', name: 'Reinforced Index Finger', cost: 100, desc: 'Cursor clicks are twice as efficient.', trigger: { building: 'cursor', count: 10 }, effect: { type: 'mult', target: 'cursor', value: 2 }, purchased: false, icon: '👆' },
                 carpalTunnel: { id: 'carpalTunnel', name: 'Carpal Tunnel Prevention', cost: 500, desc: 'Cursors are twice as efficient.', trigger: { building: 'cursor', count: 25 }, effect: { type: 'mult', target: 'cursor', value: 2 }, purchased: false, icon: '🧤' },
                 ambidextrous: { id: 'ambidextrous', name: 'Ambidextrous', cost: 10000, desc: 'Cursors are twice as efficient.', trigger: { building: 'cursor', count: 50 }, effect: { type: 'mult', target: 'cursor', value: 2 }, purchased: false, icon: '✌️' },
